fix(theme): preserve sidebar height on collapse (#8328)

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/Sidebar/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/Sidebar/styles.module.css
@@ -29,4 +29,11 @@
     width: var(--doc-sidebar-hidden-width);
     cursor: pointer;
   }
+
+  .sidebarViewport {
+    top: 0;
+    position: sticky;
+    height: 100%;
+    max-height: 100vh;
+  }
 }
